Fix compilation issues on Omnibox

The @synthesize was added as a merge conflict was incorrectly resolved.

Bug: 872311
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Iff040543b9540f51b96cadfb51ae3633d86a2690
Reviewed-on: https://chromium-review.googlesource.com/1166966
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/branch-heads/3497@{#494}
Cr-Branched-From: 271eaf50594eb818c9295dc78d364aea18c82ea8-refs/heads/master@{#576753}